--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,1 +1,5 @@
-
+.home {
+    background-image: url('m-t-elgassier-aCZ2hiC-iDk-unsplash.jpg');
+    background-repeat: no-repeat;
+    background-size: 50% 100%;
+}
