--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,4 +1,4 @@
-.home {
+body {
     background-image: url('/image/m-t-elgassier-aCZ2hiC-iDk-unsplash.jpg');
     background-repeat: no-repeat;
     background-size: 50% 100%;
