--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,8 +1,42 @@
+@media screen and (max-width: 800px)
 .half-image {
-    background-image: url('/image/m-t-elgassier-aCZ2hiC-iDk-unsplash.jpg');
+    background-image: url(/uni/assets/img/half-sm.jpg);
+}
+.half-image {
     min-height: 50vh;
     -ms-flex-order: 1;
     order: 1;
     background-size: cover;
     background-position: 50%;
+}
+
+@media screen and (min-width: 768px)
+.half main>div {
+    -ms-flex: 1;
+    flex: 1;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 50px;
+}
+.half main>div {
+    padding: 20px;
+}
+.half__content {
+    -ms-flex-order: 2;
+    order: 2;
+}
+*, :after, :before {
+    box-sizing: inherit;
+}
+user agent stylesheet
+div {
+    display: block;
+}
+@media screen and (min-width: 768px)
+body {
+    font-size: 112.5%;
 }
