--- a/css/homepage.css
+++ b/css/homepage.css
@@ -13,7 +13,9 @@
 @media screen and (min-width: 768px)
 .half main>div {
     -ms-flex: 1;
-    flex: 1;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0%;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-flow: column nowrap;
@@ -32,7 +34,7 @@
 *, :after, :before {
     box-sizing: inherit;
 }
-user agent stylesheet
+
 div {
     display: block;
 }
