--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
 <!-- Header -->
 <header>
 	<div class="head-top">
-		{% if settings.sidebar == 1 %}
+<!-- 		{% if settings.sidebar == 1 %}
 		<span class="sidebar_btn"><span></span></span>
-		{% endif %}
+		{% endif %} -->
 		
 		<a href="#" class="menu-btn"><span></span></a>
 
