--- a/_sass/glitche/layout.scss
+++ b/_sass/glitche/layout.scss
@@ -1008,12 +1008,12 @@ footer {
 	@media (max-width: 480px) {
 		width: 320px;
 	}
-	.image {
-		img {
-			width: 30%;
-			height: auto;
-		}
-	}
+	// .image {
+	// 	img {
+	// 		width: 30%;
+	// 		height: auto;
+	// 	}
+	// }
 	.desc {
 		padding: 30px 20px;
 		h4 {
