--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -40,7 +40,7 @@ layout: default
 		<div class="box-items portfolio-items">	
 			{% for work in site.works %}
 
-			{% if work.type == 'image' or work.type == '' %}
+			<!-- {% if work.type == 'image' or work.type == '' %}
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
 					<a href="{{ work.image | relative_url }}" class="has-popup-image">
@@ -149,7 +149,7 @@ layout: default
 					<a href="{{ work.music }}" class="name has-popup-music">{{ work.title }}</a>
 				</div>
 			</div>
-			{% endif %}
+			{% endif %} -->
 
 			{% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
