--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -155,7 +155,7 @@ layout: default
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
 					<a href="#popup-{{ work.id | replace: '/', '-' }}" class="has-popup-media">
-						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<!-- <img src="{{ work.image | relative_url }}" alt="{{ work.title }}" /> -->
 						<span class="info">
 							<span class="centrize full-width">
 								<span class="vertical-center">
