--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -172,7 +172,7 @@ layout: default
 				<div id="popup-{{ work.id | replace: '/', '-' }}" class="popup-box mfp-fade mfp-hide">
 					<div class="content">
 						<div class="image">
-							<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+							<!-- <img src="{{ work.image | relative_url }}" alt="{{ work.title }}" /> -->
 						</div>
 						<div class="desc">
 							<div class="category">{{ work.category }}</div>
@@ -180,9 +180,9 @@ layout: default
 							<div class="single-post-text">
 								{{ work.content }}
 							</div>
-							{% if work.button_url != '' %}
+							<!-- {% if work.button_url != '' %}
 							<a href="{{ work.button_url }}" target="_blank" class="btn" data-text="{{ ui_text.view_project }}">{{ ui_text.view_project }}</a>
-							{% endif %}
+							{% endif %} -->
 						</div>
 					</div>
 				</div>
