--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -79,7 +79,7 @@ layout: default
 			</div>
 			{% endif %}
 
-
+<!-- 
 			{% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
@@ -116,7 +116,7 @@ layout: default
 					</div>
 				</div>
 			</div>
-			{% endif %}
+			{% endif %} -->
 
 
 			{% endfor %}
