--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -80,7 +80,7 @@ layout: default
 			{% endif %}
 
 
-			{% if work.type == 'content' %}
+			<!-- {% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
 					<a href="#popup-{{ work.id | replace: '/', '-' }}" class="has-popup-media">
@@ -116,7 +116,7 @@ layout: default
 					</div>
 				</div>
 			</div>
-			{% endif %}
+			{% endif %} -->
 
 
 			{% endfor %}
