--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -40,6 +40,116 @@ layout: default
 		<div class="box-items portfolio-items">	
 			{% for work in site.works %}
 
+			<!-- {% if work.type == 'image' or work.type == '' %}
+			<div class="box-item {{ work.category_slug }}">
+				<div class="image">
+					<a href="{{ work.image | relative_url }}" class="has-popup-image">
+						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<span class="info">
+							<span class="centrize full-width">
+								<span class="vertical-center">
+									<span class="ion ion-image"></span>
+								</span>
+							</span>
+						</span>
+					</a>
+				</div>
+				<div class="desc">
+					<div class="category">{{ work.category }}</div>
+					<a href="{{ work.image | relative_url }}" class="name has-popup-image">{{ work.title }}</a>
+				</div>
+			</div>
+			{% endif %}
+
+			{% if work.type == 'gallery' %}
+			<div class="box-item {{ work.category_slug }}">
+				<div class="image">
+					<a href="#gallery-{{ work.id | replace: '/', '-' }}" class="has-popup-gallery">
+						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<span class="info">
+							<span class="centrize full-width">
+								<span class="vertical-center">
+									<span class="ion ion-images"></span>
+								</span>
+							</span>
+						</span>
+					</a>
+					<div id="gallery-{{ work.id | replace: '/', '-' }}" class="mfp-hide">
+						{% assign gallery = work.gallery | split: "," %}
+						{% for img in gallery %}
+						<a href="{{ img | relative_url }}"></a>
+						{% endfor %}
+					</div>
+				</div>
+				<div class="desc">
+					<div class="category">{{ work.category }}</div>
+					<a href="#gallery-1" class="name has-popup-gallery">{{ work.title }}</a>
+				</div>
+			</div>
+			{% endif %}
+
+			{% if work.type == 'video' %}
+			<div class="box-item {{ work.category_slug }}">
+				<div class="image">
+					<a href="{{ work.video }}" class="has-popup-video">
+						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<span class="info">
+							<span class="centrize full-width">
+								<span class="vertical-center">
+									<span class="ion ion-videocamera"></span>
+								</span>
+							</span>
+						</span>
+					</a>
+				</div>
+				<div class="desc">
+					<div class="category">{{ work.category }}</div>
+					<a href="{{ work.video }}" class="name has-popup-video">{{ work.title }}</a>
+				</div>
+			</div>
+			{% endif %}
+
+			{% if work.type == 'link' %}
+			<div class="box-item {{ work.category_slug }}">
+				<div class="image">
+					<a href="{{ work.link }}" class="has-popup-link" target="_blank">
+						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<span class="info">
+							<span class="centrize full-width">
+								<span class="vertical-center">
+									<span class="ion ion-link"></span>
+								</span>
+							</span>
+						</span>
+					</a>
+				</div>
+				<div class="desc">
+					<div class="category">{{ work.category }}</div>
+					<a target="_blank" href="{{ work.link }}" class="name has-popup-link">{{ work.title }}</a>
+				</div>
+			</div>
+			{% endif %}
+
+			{% if work.type == 'music' %}
+			<div class="box-item {{ work.category_slug }}">
+				<div class="image">
+					<a href="{{ work.music }}" class="has-popup-music">
+						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
+						<span class="info">
+							<span class="centrize full-width">
+								<span class="vertical-center">
+									<span class="ion ion-music-note"></span>
+								</span>
+							</span>
+						</span>
+					</a>
+				</div>
+				<div class="desc">
+					<div class="category">{{ work.category }}</div>
+					<a href="{{ work.music }}" class="name has-popup-music">{{ work.title }}</a>
+				</div>
+			</div>
+			{% endif %} -->
 
 			{% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
@@ -80,7 +190,7 @@ layout: default
 			{% endif %}
 
 
-			<!-- {% if work.type == 'content' %}
+{% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
 					<a href="#popup-{{ work.id | replace: '/', '-' }}" class="has-popup-media">
@@ -116,7 +226,7 @@ layout: default
 					</div>
 				</div>
 			</div>
-			{% endif %} -->
+			{% endif %}
 
 
 			{% endfor %}
