--- a/_sass/glitche/layout.scss
+++ b/_sass/glitche/layout.scss
@@ -695,10 +695,10 @@ header {
 		display: block;
 	}
 
-	img {
-		// max-width: 100%;
-		// height: auto;
-	}
+	// img {
+	// 	// max-width: 100%;
+	// 	// height: auto;
+	// }
 
 	p {
 		a {
