--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -40,7 +40,7 @@ layout: default
 		<div class="box-items portfolio-items">	
 			{% for work in site.works %}
 
-			<!-- {% if work.type == 'image' or work.type == '' %}
+			{% if work.type == 'image' or work.type == '' %}
 			<div class="box-item {{ work.category_slug }}">
 				<div class="image">
 					<a href="{{ work.image | relative_url }}" class="has-popup-image">
@@ -149,7 +149,7 @@ layout: default
 					<a href="{{ work.music }}" class="name has-popup-music">{{ work.title }}</a>
 				</div>
 			</div>
-			{% endif %} -->
+			{% endif %}
 
 			{% if work.type == 'content' %}
 			<div class="box-item {{ work.category_slug }}">
@@ -172,7 +172,7 @@ layout: default
 				<div id="popup-{{ work.id | replace: '/', '-' }}" class="popup-box mfp-fade mfp-hide">
 					<div class="content">
 						<div class="image">
-							<!-- <img src="{{ work.image | relative_url }}" alt="{{ work.title }}" /> -->
+							<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
 						</div>
 						<div class="desc">
 							<div class="category">{{ work.category }}</div>
@@ -180,54 +180,14 @@ layout: default
 							<div class="single-post-text">
 								{{ work.content }}
 							</div>
-							<!-- {% if work.button_url != '' %}
+							{% if work.button_url != '' %}
 							<a href="{{ work.button_url }}" target="_blank" class="btn" data-text="{{ ui_text.view_project }}">{{ ui_text.view_project }}</a>
-							{% endif %} -->
+							{% endif %}
 						</div>
 					</div>
 				</div>
 			</div>
 			{% endif %}
-
-
-{% if work.type == 'content' %}
-			<div class="box-item {{ work.category_slug }}">
-				<div class="image">
-					<a href="#popup-{{ work.id | replace: '/', '-' }}" class="has-popup-media">
-						<img src="{{ work.image | relative_url }}" alt="{{ work.title }}" />
-						<span class="info">
-							<span class="centrize full-width">
-								<span class="vertical-center">
-									<span class="ion ion-ios-plus-empty"></span>
-								</span>
-							</span>
-						</span>
-					</a>
-				</div>
-				<div class="desc">
-					<div class="category">{{ work.category }}</div>
-					<a href="#popup-{{ work.id | replace: '/', '-' }}" class="name has-popup-media">{{ work.title }}</a>
-				</div>
-				<div id="popup-{{ work.id | replace: '/', '-' }}" class="popup-box mfp-fade mfp-hide">
-					<div class="content">
-						<div class="image">
-							<!-- <img src="{{ work.image | relative_url }}" alt="{{ work.title }}" /> -->
-						</div>
-						<div class="desc">
-							<div class="category">{{ work.category }}</div>
-							<h4>{{ work.title }}</h4>
-							<div class="single-post-text">
-								{{ work.content }}
-							</div>
-							<!-- {% if work.button_url != '' %}
-							<a href="{{ work.button_url }}" target="_blank" class="btn" data-text="{{ ui_text.view_project }}">{{ ui_text.view_project }}</a>
-							{% endif %} -->
-						</div>
-					</div>
-				</div>
-			</div>
-			{% endif %}
-
 
 			{% endfor %}
 		</div>
