--- a/_sass/glitche/layout.scss
+++ b/_sass/glitche/layout.scss
@@ -998,7 +998,7 @@ footer {
 /* 13. Popups */
 .popup-box {
 	margin: 30px auto;
-	// width: 520px;
+	width: 900px;
 	background: $white-color;
 	position: relative;
 	padding: 10px;
